--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <py-script>
-grade = input("please input your grades")
-print(grade)
+print("hello")
+
 </py-script>
 </body>
 </html>
